fix(ui): side drawer menu was visible when closed

--- a/client/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/client/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -20,7 +20,7 @@
 	color: #207ea2;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
 	.NavigationItem {
 		margin: 10px 0;
 		box-sizing: border-box;
