--- a/client/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/client/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -17,7 +17,7 @@
 	height: 100%;
 }
 
-@media (max-width: 499px) {
+@media (max-width: 599px) {
 	.DesktopOnly {
 		display: none;
 	}
